--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,22 +2,22 @@ Package: tidycmprsk
 Title: Tidy Implementation of Competing Risks Regression
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
+    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 License: AGPL (>= 3)
 Imports: 
     cmprsk,
-    dplyr,
+    dplyr (>= 1.0.3),
     hardhat,
     survival,
     tibble
+Suggests: 
+    covr,
+    gtsummary,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Suggests: 
-    covr
