--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,12 @@
 
 S3method(crr,default)
 S3method(crr,formula)
+S3method(model.frame,tidycmprsk)
 S3method(model.matrix,tidycmprsk)
 S3method(print,tidycmprsk)
 export("%>%")
 export(crSurv)
 export(crr)
 importFrom(dplyr,"%>%")
+importFrom(rlang,.data)
+importFrom(rlang,.env)
