--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,13 @@ S3method(crr,default)
 S3method(crr,formula)
 S3method(model.frame,tidycmprsk)
 S3method(model.matrix,tidycmprsk)
+S3method(predict,tidycmprsk)
 S3method(print,tidycmprsk)
+S3method(tidy,tidycmprsk)
 export("%>%")
 export(crSurv)
 export(crr)
+import(broom)
 importFrom(dplyr,"%>%")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
