--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,10 @@ export(augment_columns)
 export(crSurv)
 export(crr)
 import(broom)
+import(ellipsis)
 import(hardhat)
+import(purrr)
+import(stringr)
 importFrom(dplyr,"%>%")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
