Rename the class (from tidycmprsk to tidycrr) for the crr function.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,7 @@ Imports:
     survival,
     tibble,
     broom,
-    ellipsis,
-    purrr,
-    stringr
+    purrr
 Suggests: 
     covr,
     gtsummary,
