housekeeping to pass the check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ Imports:
     survival,
     tibble,
     broom,
-    purrr
+    purrr,
+    generics,
+    stringr
 Suggests: 
     covr,
     gtsummary,
