--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,13 +10,19 @@ S3method(predict,tidycrr)
 S3method(print,tidycrr)
 S3method(tidy,tidycrr)
 export("%>%")
-export(crSurv)
+export(Surv)
+export(augment)
 export(crr)
-import(generics)
-import(hardhat)
+export(glance)
+export(tidy)
+importFrom(broom,augment)
+importFrom(broom,glance)
+importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
+importFrom(purrr,"%||%")
 importFrom(purrr,map2)
 importFrom(rlang,.data)
 importFrom(rlang,.env)
 importFrom(stringr,str_split)
+importFrom(survival,Surv)
 importFrom(tibble,as_tibble_row)
