--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(model.frame,tidycrr)
 S3method(model.matrix,tidycrr)
 S3method(predict,tidycrr)
 S3method(print,tidycrr)
+S3method(terms,tidycrr)
 S3method(tidy,tidycrr)
 export("%>%")
 export(Surv)
