--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,20 +10,20 @@ URL: https://mskcc-epi-bio.github.io/tidycmprsk
 Depends: 
     R (>= 3.4)
 Imports: 
-    broom,
-    cli,
-    cmprsk,
-    dplyr (>= 1.0.3),
-    hardhat,
-    purrr,
-    rlang,
-    stringr,
+    broom (>= 0.7.9),
+    cli (>= 3.0.1),
+    cmprsk (>= 2.2.10),
+    dplyr (>= 1.0.7),
+    hardhat (>= 0.1.6),
+    purrr (>= 0.3.4),
+    rlang (>= 0.4.11),
+    stringr (>= 1.4.0),
     survival,
-    tibble
+    tibble (>= 3.1.4)
 Suggests: 
-    covr,
-    gtsummary,
-    testthat (>= 3.0.0)
+    covr (>= 3.5.1),
+    gtsummary (>= 1.4.2),
+    testthat (>= 3.0.4)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
