--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,17 +3,21 @@
 S3method(augment,tidycrr)
 S3method(crr,default)
 S3method(crr,formula)
+S3method(cuminc,default)
+S3method(cuminc,formula)
 S3method(glance,tidycrr)
 S3method(model.frame,tidycrr)
 S3method(model.matrix,tidycrr)
 S3method(predict,tidycrr)
 S3method(print,tidycrr)
+S3method(print,tidycuminc)
 S3method(terms,tidycrr)
 S3method(tidy,tidycrr)
 export("%>%")
 export(Surv)
 export(augment)
 export(crr)
+export(cuminc)
 export(glance)
 export(tidy)
 importFrom(broom,augment)
