adding print method

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,11 @@ Depends:
     R (>= 3.4)
 Imports: 
     broom (>= 0.7.9),
+    broom.helpers,
     cli (>= 3.0.1),
     cmprsk (>= 2.2.10),
     dplyr (>= 1.0.7),
+    gtsummary (>= 1.5.0),
     hardhat (>= 0.1.6),
     purrr (>= 0.3.4),
     rlang (>= 0.4.11),
@@ -22,8 +24,9 @@ Imports:
     tibble (>= 3.1.4)
 Suggests: 
     covr (>= 3.5.1),
-    gtsummary (>= 1.4.2),
     testthat (>= 3.0.4)
+Remotes:
+    larmarange/broom.helpers
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
