--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ importFrom(broom,augment)
 importFrom(broom,glance)
 importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,everything)
+importFrom(dplyr,select)
 importFrom(purrr,"%||%")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
