--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(print,tidycrr)
 S3method(print,tidycuminc)
 S3method(terms,tidycrr)
 S3method(tidy,tidycrr)
+S3method(tidy,tidycuminc)
 export("%>%")
 export(Surv)
 export(augment)
