--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(crr,formula)
 S3method(cuminc,default)
 S3method(cuminc,formula)
 S3method(glance,tidycrr)
+S3method(glance,tidycuminc)
 S3method(model.frame,tidycrr)
 S3method(model.frame,tidycuminc)
 S3method(model.matrix,tidycrr)
