misc doc updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(glance,tidycuminc)
 S3method(model.frame,tidycrr)
 S3method(model.frame,tidycuminc)
 S3method(model.matrix,tidycrr)
+S3method(model.matrix,tidycuminc)
 S3method(predict,tidycrr)
 S3method(print,tidycrr)
 S3method(print,tidycuminc)
