--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Imports:
     cli (>= 3.0.1),
     cmprsk (>= 2.2.10),
     dplyr (>= 1.0.7),
+    ggplot2 (>= 3.3.0),
     gtsummary (>= 1.5.0),
     hardhat (>= 0.1.6),
     purrr (>= 0.3.4),
