--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,8 +33,13 @@ importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,everything)
 importFrom(dplyr,select)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
+importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,geom_step)
+importFrom(ggplot2,ggplot)
 importFrom(purrr,"%||%")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
+importFrom(rlang,expr)
 importFrom(survival,Surv)
