--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: tidycmprsk
 Title: Tidy Implementation of Competing Risks Regression
 Version: 0.0.0.9000
-Authors@R: 
-    c(person(given = "Daniel D.",
-             family = "Sjoberg",
-             role = c("aut", "cre"),
-             email = "danield.sjoberg@gmail.com",
-             comment = c(ORCID = "0000-0003-0862-2018")),
-      person(given = "Teng",
-             family = "Fei",
-             role = "aut"))
-Description: What the package does (one paragraph).
+Authors@R: c(
+    person(c("Daniel", "D."), "Sjoberg", , "danield.sjoberg@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-0862-2018")),
+    person("Teng", "Fei", role = "aut")
+  )
+Description: Provides an improved interface for working with the competing
+    risk endpoints. The package wraps the 'cmprsk' package, and exports
+    functions for univariate cumulative incidence estimates and competing
+    risk regression.
 License: AGPL (>= 3)
 URL: https://mskcc-epi-bio.github.io/tidycmprsk
+BugReports: https://mskcc-epi-bio.github.io/tidycmprsk/issues
 Depends: 
     R (>= 3.4)
 Imports: 
@@ -27,8 +27,8 @@ Imports:
     rlang (>= 0.4.11),
     stringr (>= 1.4.0),
     survival,
-    tidyr (>= 1.1.4),
-    tibble (>= 3.1.4)
+    tibble (>= 3.1.4),
+    tidyr (>= 1.1.4)
 Suggests: 
     covr (>= 3.5.1),
     testthat (>= 3.0.4)
