Add recipe method (import from recipes may be unnecessary)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(autoplot,tidycuminc)
 S3method(coef,tidycrr)
 S3method(crr,default)
 S3method(crr,formula)
+S3method(crr,recipe)
 S3method(cuminc,default)
 S3method(cuminc,formula)
 S3method(glance,tidycrr)
