--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Version: 0.0.0.9000
 Authors@R: c(
     person(c("Daniel", "D."), "Sjoberg", , "danield.sjoberg@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0862-2018")),
-    person("Teng", "Fei", role = "aut")
+    person("Teng", "Fei", role = "aut",
+           comment = c(ORCID = "0000-0001-7888-1715"))
   )
 Description: Provides an improved interface for working with the competing
     risk endpoints. The package wraps the 'cmprsk' package, and exports
