--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,13 +7,13 @@ Authors@R: c(
     person("Teng", "Fei", role = "aut",
            comment = c(ORCID = "0000-0001-7888-1715"))
   )
-Description: Provides an improved interface for working with the competing
+Description: Provides an intuitive interface for working with the competing
     risk endpoints. The package wraps the 'cmprsk' package, and exports
     functions for univariate cumulative incidence estimates and competing
     risk regression.
 License: AGPL (>= 3)
-URL: https://mskcc-epi-bio.github.io/tidycmprsk
-BugReports: https://mskcc-epi-bio.github.io/tidycmprsk/issues
+URL: https://mskcc-epi-bio.github.io/tidycmprsk/
+BugReports: https://github.com/MSKCC-Epi-Bio/tidycmprsk/issues/
 Depends: 
     R (>= 3.4)
 Imports: 
