--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,22 +18,23 @@ BugReports: https://github.com/MSKCC-Epi-Bio/tidycmprsk/issues/
 Depends: 
     R (>= 3.4)
 Imports: 
-    broom (>= 0.7.9),
-    cli (>= 3.0.1),
+    broom (>= 0.7.10),
+    cli (>= 3.1.0),
     cmprsk (>= 2.2.10),
     dplyr (>= 1.0.7),
-    ggplot2 (>= 3.3.0),
+    ggplot2 (>= 3.3.5),
     gtsummary (>= 1.5.0),
     hardhat (>= 0.1.6),
     purrr (>= 0.3.4),
-    rlang (>= 0.4.11),
+    rlang (>= 0.4.12),
     stringr (>= 1.4.0),
     survival,
-    tibble (>= 3.1.4),
+    tibble (>= 3.1.6),
     tidyr (>= 1.1.4)
 Suggests: 
     covr (>= 3.5.1),
-    testthat (>= 3.0.4)
+    knitr (>= 1.36),
+    testthat (>= 3.1.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
