importing some dplyr fns for easier reading

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,13 @@ importFrom(broom,augment)
 importFrom(broom,glance)
 importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
+importFrom(dplyr,any_of)
+importFrom(dplyr,arrange)
 importFrom(dplyr,everything)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
