added conf.level argument

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_step)
 importFrom(ggplot2,ggplot)
 importFrom(purrr,"%||%")
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
 importFrom(rlang,expr)
