--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ BugReports: https://github.com/MSKCC-Epi-Bio/tidycmprsk/issues/
 Depends: 
     R (>= 3.4)
 Imports: 
-    broom (>= 0.7.10),
+    broom (>= 0.7.10.9000),
     cli (>= 3.1.0),
     cmprsk (>= 2.2.10),
     dplyr (>= 1.0.7),
@@ -32,13 +32,15 @@ Imports:
     tibble (>= 3.1.6),
     tidyr (>= 1.1.4)
 Suggests: 
-    spelling,
     covr (>= 3.5.1),
     knitr (>= 1.36),
+    spelling,
     testthat (>= 3.1.0)
+Remotes:
+    tidymodels/broom
 Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Language: en-US
