--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Imports:
     dplyr (>= 1.0.7),
     ggplot2 (>= 3.3.5),
     gtsummary (>= 1.5.0),
-    hardhat (>= 0.1.6),
+    hardhat (>= 0.1.6.9000),
     purrr (>= 0.3.4),
     rlang (>= 0.4.12),
     stringr (>= 1.4.0),
@@ -37,7 +37,8 @@ Suggests:
     spelling,
     testthat (>= 3.1.0)
 Remotes:
-    tidymodels/broom
+    tidymodels/broom,
+    tidymodels/hardhat
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
