adding the my_mean() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(crr)
 export(cuminc)
 export(glance)
 export(inline_text)
+export(my_mean)
 export(tbl_cuminc)
 export(tidy)
 importFrom(broom,augment)
