--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tidycmprsk
 Title: Competing Risks Estimation
-Version: 0.1.2.9003
+Version: 0.1.2.9004
 Authors@R: c(
     person(c("Daniel", "D."), "Sjoberg", , "danield.sjoberg@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0000-0003-0862-2018")),
@@ -33,6 +33,7 @@ Imports:
     tidyr (>= 1.1.4)
 Suggests: 
     covr (>= 3.5.1),
+    ggsurvfit,
     knitr (>= 1.36),
     spelling,
     testthat (>= 3.1.0)
