--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,6 +37,9 @@ Suggests:
     knitr (>= 1.36),
     spelling,
     testthat (>= 3.1.0)
+Remotes:
+    r-lib/tidyselect,
+    tidyverse/tidyr
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
