--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tidycmprsk
 Title: Competing Risks Estimation
-Version: 0.1.2.9004
+Version: 0.1.2.9005
 Authors@R: c(
     person(c("Daniel", "D."), "Sjoberg", , "danield.sjoberg@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0000-0003-0862-2018")),
@@ -18,12 +18,12 @@ BugReports: https://github.com/MSKCC-Epi-Bio/tidycmprsk/issues/
 Depends: 
     R (>= 3.4)
 Imports: 
-    broom (>= 0.7.11),
+    broom (>= 1.0.1),
     cli (>= 3.1.0),
     cmprsk (>= 2.2.10),
     dplyr (>= 1.0.7),
     ggplot2 (>= 3.3.5),
-    gtsummary (>= 1.6.1),
+    gtsummary (>= 1.6.1.9000),
     hardhat (>= 0.2.0),
     purrr (>= 0.3.4),
     rlang (>= 1.0.0),
@@ -39,7 +39,8 @@ Suggests:
     testthat (>= 3.1.0)
 Remotes:
     r-lib/tidyselect,
-    tidyverse/tidyr
+    tidyverse/tidyr,
+    ddsjoberg/gtsummary
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
