--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Imports:
     cmprsk (>= 2.2.10),
     dplyr (>= 1.0.7),
     ggplot2 (>= 3.3.5),
-    gtsummary (>= 1.7.2),
+    gtsummary (>= 1.9.9),
     hardhat (>= 1.3.0),
     purrr (>= 0.3.4),
     rlang (>= 1.0.0),
@@ -31,15 +31,19 @@ Imports:
     survival,
     tibble (>= 3.1.6),
     tidyr (>= 1.1.4)
-Suggests: 
+Suggests:  
+    aod,
+    cardx (>= 0.2.0),
     covr (>= 3.5.1),
+    broom.helpers,
     ggsurvfit,
     knitr (>= 1.36),
     spelling,
     testthat (>= 3.2.0)
+Remotes: ddsjoberg/gtsummary
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
