--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,18 +19,18 @@ Depends:
     R (>= 4.2)
 Imports: 
     broom (>= 1.0.1),
-    cli (>= 3.1.0),
+    cli,
     cmprsk (>= 2.2.10),
-    dplyr (>= 1.0.7),
+    dplyr,
     ggplot2 (>= 3.3.5),
     gtsummary (>= 2.0.0),
     hardhat (>= 1.3.0),
     purrr (>= 0.3.4),
-    rlang (>= 1.0.0),
+    rlang,
     stringr (>= 1.4.0),
     survival,
     tibble (>= 3.1.6),
-    tidyr (>= 1.1.4)
+    tidyr
 Suggests: 
     aod,
     broom.helpers (>= 1.15.0),
@@ -45,4 +45,4 @@ Encoding: UTF-8
 Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
